      not DFSG-free.  (Closes: #181494)
      The whole glibc-2.4/manual directory is removed from glibc-2.4.tar.bz2.
    - debian/control: Drop Build-Depends: texinfo, texi2html.
    - debian/control: Drop references to the antique libc-doc package.

  [ Michael Banck ]
  * debian/sysdeps/hurd.mk: Only use libidn for add-ons.

  [ Aurelien Jarno ]
  * Remove any/cvs-argp_h.diff (merged upstream).
  * Remove any/cvs-ctan.diff (merged upstream).
  * Remove any/cvs-futimes.diff (merged upstream).
  * Remove any/cvs-nfs_h.diff (merged upstream).
  * Remove any/cvs-path_log.diff (merged upstream).
  * Remove any/cvs-resource_h.diff (merged upstream).
  * Remove any/cvs-tls-crashfix.diff (merged upstream).
  * Remove any/local-kernel-features.diff (merged upstream).
  * Update any/local-ldso-disable-hwcap.diff.
  * Update any/local-rtld.diff.
  * Update any/local-version-sanity.diff.
  * Update any/submitted-nis-netgrp.diff.
  * Remove hppa/cvs-linesep.diff (merged upstream).
  * Update hppa/submitted-fenv-align.diff to reflect the new port add-on.
  * Remove hurd-i386/cvs-ioctl-pfinet.diff (merged upstream).
  * Remove hurd-i386/cvs-getresuid-dyslexia.diff (merged upstream).
  * Remove hurd-i386/cvs-posix-opts.diff (merged upstream).
  * Update hurd-i386/submitted-sysvshm.diff.
  * Remove m32r/cvs-elf-m32r_rel32.diff (merged upstream).
  * Remove mips/cvs-gcc4-inline.diff (merged upstream).
  * Remove mips/cvs-gcc4-sysdeps.diff (merged upstream).
  * Update mips/local-librt.diff to reflect the new port add-on.
  * Update mips/submitted-msq.diff to reflect the new port add-on.
  * Remove powerpc/cvs-gcc41-initfini.diff (merged upstream).
  * debian/sysdeps/sparc.mk: do an NPTL pass.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 28 May 2006 03:28:14 +0200

glibc (2.3.6-11) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * debian/rules/build.mk: don't remove ld.so from udeb packages.
  * debian/rules: move udeb_add-ons to debian/sysdeps/{kfreebsd,linux}.mk.