@@ -53,6 +53,7 @@ glibc (2.4-1) UNRELEASED; urgency=low
   * debian/sysdeps/hurd.mk: Only use libidn for add-ons.
 
   [ Aurelien Jarno ]
+  * Update all/submitted-new-brf-encoding.diff.
   * Remove any/cvs-argp_h.diff (merged upstream).
   * Remove any/cvs-ctan.diff (merged upstream).
   * Remove any/cvs-futimes.diff (merged upstream).
